[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "civit"
version = "0.0.1"
authors = [
  { name = "Trahloc colDhart", email = "github@trahloc.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
civit = "src.civit.__main__"

[tool.setuptools.packages.find]
where = ["src"]
