[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "civit"
version = "100.0.2"
authors = [{ name = "Trahloc colDhart", email = "github@trahloc.com" }]
description = "Tool for downloading models from Civitai"
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "tqdm"]

# --- AI/Developer Note ---
# Project uses a standard "src layout" where the package 'civit' is inside the 'src' directory.
# The main CLI module is located at: src/civit/cli.py
# The entry point below correctly targets this file's main function.
# Do NOT create or edit a file at src/cli.py.
# --- End Note ---
[project.scripts]
civit = "civit.cli:main" # Pointing to the module within the installed package

[project.urls]
"Homepage" = "https://github.com/yourusername/civit"
"Bug Tracker" = "https://github.com/yourusername/civit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "hypothesis",
    "pre-commit",
    "autoinit",
]

[tool.mypy]
files = ["src/civit"]
