# FILE_LOCATION: hfais/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hfais"
version = "1742389364" # epoch date format for AI-driven versioning
authors = [
    { name = "Zeroth Law Developer", email = "developer@example.com" },
]
description = "A Python project using the Zeroth Law framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "autoinit", # Added autoinit
]

[project.scripts]
hfais = "hfais.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
select = ["E", "W", "F", "C"]
ignore = ["E203", "W503"]

[tool.mypy]
strict = true