# FILE_LOCATION: template_zeroth_law/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_zeroth_law"
version = "0.1.0"  # Consider using a timestamp-based version like in the framework
authors = [
  { name = "Trahloc colDhart", email = "github@trahloc.com" }
]
description = "A universal Python project template following the Zeroth Law AI Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "click",                # Command-line handling
  "cookiecutter>=2.1.1",  # Project scaffolding
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "pydocstyle>=6.0.0",
  "interrogate>=1.5.0",
  "pre-commit>=3.0.0",
]

[project.scripts]
template_zeroth_law = "template_zeroth_law.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.interrogate]
ignore-init-module = true
ignore-init-method = false
ignore-magic = false
ignore-property = false
length-limit = true
line-length = 88
fail-under = 95
exclude = ["setup.py", "docs", "build", "dist", "**/__pycache__/**"]
verbose = false
quiet = false
whitelist-regex = []
color = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-xvs"
