# FILE_LOCATION: https://github.com/Trahloc/Misc/blob/main/zeroth_law/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroth_law"  # Package name (for importing)
version = "1742388893" # using epoch since this is a vibe project and not done by a real coder
authors = [
    { name = "Trahloc colDhart", email = "github@trahloc.com" },
]
description = "A Python code analyzer to enforce the Zeroth Law of AI-Driven Development."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",  # Assuming you have other dependencies
    "cookiecutter>=2.1.1",  # Adding cookiecutter dependency
    # ...other existing dependencies...
]

[project.scripts]
zeroth-law = "zeroth_law.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
# Explicitly ignore cookiecutter template directories and files with cookiecutter variables
norecursedirs = ["src/zeroth_law/cookiecutter-template", "tests/zeroth_law/cookiecutter-template", "*cookiecutter*", "*{{*}}*"]
# Add a custom marker for tests that involve cookiecutter templates if needed
markers = [
    "cookiecutter: marks tests that involve cookiecutter templates (deselect with '-m \"not cookiecutter\"')"
]

[tool.pytest.ini_options]
cache_dir = "$HOME/.config/python/pytest-cache"
# verbose = true  # Removed as it's causing a warning
