[tool.poetry]
name = "zeroth_law"
version = "2025.4.8"  # Epoch/Date based versioning
description = "Enforcer for the Zeroth Law AI Framework"
authors = ["Trahloc colDhart <github@trahloc.com>"] # Placeholder - Please update
license = "CC0" # Placeholder - Choose appropriate license
readme = "README.md"
packages = [{include = "zeroth_law", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
structlog = "^24.1.0"
pydantic = "^2.7.1"
xdg = "^6.0.0" # For XDG Base Directory Specification adherence

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.1.1"
pytest-cov = "^5.0.0" # For test coverage

# Type Checking
mypy = "^1.9.0" # Ensure version supports Python 3.13 robustly

# Linting, Formatting, Doc Checks, Import Sorting
ruff = "^0.4.10" # Use a specific recent version

# Duplication Check (Targeted Use)
pylint = "^3.1.0" # Ensure version supports Python 3.13 robustly

# Environment Generation Tool
poetry-plugin-export = "^1.8.0" # Check for the latest compatible version

# Git Hooks Manager
pre-commit = "^3.6.0"

# Optional Tools
autoinit = "^0.3.0" # If used for __init__.py management

# Build/Publishing Tools (Optional)
# build = "^1.0.0"
# twine = "^5.0.0"

# Types (Ensure these match versions used)
types-setuptools = "^70.3.0" # Align with installed version

[tool.ruff]
# Allow fixing errors automatically.
fix = true
# Display violations that are fixable even if `fix` is disabled.
show-fixes = true
# Select all rules by default.
# fixable = ["ALL"]
# Explicitly configure deviates from the defaults.
# extend-fixable = ["B", "RUF100"]

# Same as Black.
line-length = 140

# Assume Python 3.13
target-version = "py313"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".legacy",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
    "environment.yml",
]

[tool.ruff.lint]
# Select all rules by default.
select = ["ALL"]

# Allow unused variables in test files (Example, add more specific ignores below)
# TODO: Add test directory once it exists
# per-file-ignores."tests/*" = ["F841"]

# Ignore specific rules globally
ignore = [
    "ERA001", # Ignore commented-out code rule (needed for # FILE: comments)
    # Style conflicts / warnings from output:
    "D203",   # Incompatible with D211 (no-blank-line-before-class)
    "D213",   # Incompatible with D212 (multi-line-summary-first-line)
    "COM812", # Conflicts with formatter (Missing trailing comma)
    "ISC001", # Conflicts with formatter (Implicit string concatenation)
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "FIX002", # TODO comment detected
]

# Ignore specific rules per file/directory
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Ignore assert statements in test files
"src/zeroth_law/analyzer.py" = ["N802", "SLF001"] # Ignore visitor method names and private access

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = "src" # Tell mypy where to find source modules
strict = true
warn_unused_configs = true
exclude = ["venv", ".venv", "build", "dist", "docs", "environment.yml"]

[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have type hints readily available
# Add more as needed during development
module = [
    "xdg.*",
]
ignore_missing_imports = true

[tool.pylint.'MAIN']
# Use all default checkers.
disable = """
    all
"""
enable = ["R0801"] # similar lines in modules checker
ignore = ["CVS", ".git", ".hg", ".svn", "tests/", "venv", ".venv"]
persistent = "yes"
jobs = 0 # Use all available CPUs

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/zeroth_law --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["src/zeroth_law"]
omit = [
    "src/zeroth_law/__main__.py", # If a CLI entry point is added
]

[tool.coverage.report]
#fail_under = 90 # Uncomment and adjust threshold later
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Add poetry-plugin-conda configuration if needed, usually defaults are fine
# [tool.poetry-plugin-conda]
# ...

[tool.poetry2conda]
name = "zeroth_law" # Name for the generated conda environment

# Optional: Add dependencies section here later if specific conda mappings are needed
# [tool.poetry2conda.dependencies]
# some-pypi-pkg = { channel = "conda-forge", name = "some-conda-pkg" }
