[tool.poetry]
name = "zeroth_law"
version = "2025.4.8"  # Epoch/Date based versioning
description = "Enforcer for the Zeroth Law AI Framework"
authors = ["Trahloc colDhart <github@trahloc.com>"] # Placeholder - Please update
license = "CC0" # Placeholder - Choose appropriate license
readme = "README.md"
packages = [{include = "zeroth_law", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
structlog = "^25.2.0"
pydantic = "^2.11.3"
xdg = "^6.0.0" # For XDG Base Directory Specification adherence
click = "^8.1.7" # Added Click for CLI - Use latest version
black = "^25.1.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.5"
pytest-cov = "^6.1.1" # Reverted back
pytest-mock = "^3.14.0" # Add pytest-mock

# Type Checking
mypy = "^1.15.0" # Ensure version supports Python 3.13 robustly

# Linting, Formatting, Doc Checks, Import Sorting
ruff = "^0.11.4" # Use a specific recent version

# Duplication Check (Targeted Use)
pylint = "^3.3.6" # Ensure version supports Python 3.13 robustly

# Environment Generation Tool (No longer needed with pure Poetry workflow)
# poetry-plugin-export = "^1.9.0" # Check for the latest compatible version

# Git Hooks Manager
pre-commit = "^4.2.0"

# Optional Tools
autoinit = "^1.1.1" # If used for __init__.py management

# Build/Publishing Tools (Optional)
# build = "^1.0.0"
# twine = "^5.0.0"

# Types (Ensure these match versions used)
types-setuptools = "^78.1.0" # Align with installed version

# Add scripts entry point
types-pyyaml = "^6.0.12.20250402"
[tool.poetry.scripts]
zeroth-law = "zeroth_law.cli:cli_group"
zlt = "zeroth_law.cli:cli_group" # Add zlt alias

# --- Add Zeroth Law Tool Configuration --- #
[tool.zeroth-law]
# Default excludes + legacy
exclude_dirs = [
    ".git",
    ".hg",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".legacy", # <-- Added
]
exclude_files = []
ignore_codes = []
max_lines = 140
max_complexity = 8
max_parameters = 5
max_statements = 50
# Explicitly define project and git roots relative to this file
# Project root path also implicitly defines the project directory name for validation.
project_root = "../zeroth_law_pkg/"
git_root = ".."
# ----------------------------------------- #

[tool.ruff]
# Allow fixing errors automatically.
fix = true
# Display violations that are fixable even if `fix` is disabled.
show-fixes = true
# Select all rules by default.
# fixable = ["ALL"]
# Explicitly configure deviates from the defaults.
# extend-fixable = ["B", "RUF100"]

# Same as Black.
line-length = 140

# Assume Python 3.13
target-version = "py313"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".legacy",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
    "environment.yml",
]

[tool.ruff.lint]
# Allow unused variables for now to unblock refactoring on dev branch.
# TODO: Implement pytest checks or similar to catch unused variables per file/commit
#       before merging to main, instead of relying on a global Ruff check.
select = ["E", "F"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line with quotes
    "D203",  # 1 blank line required before class docstring (found 0) -> Conflicts with D211
    # "D205",  # 1 blank line required between summary line and description
    "D211",  # No blank lines allowed before class docstring -> Conflicts with D203
    # "D212",  # Multi-line docstring summary should start at the first line
    # "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end with a period
    # "D401",  # First line should be in imperative mood
    # "D415",  # First line should end with a period, question mark, or exclamation point
    "D417",  # Missing argument description in the docstring

    # Complexity / Length
    "C901",  # `function` is too complex
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    # "PLR2004", # Magic value used in comparison

    # Annotations
    # "ANN001",  # Missing type annotation for function argument
    # "ANN002",  # Missing type annotation for `*args`
    # "ANN003",  # Missing type annotation for `**kwargs`
    # "ANN101",  # Missing type annotation for `self` in method (Removed from Ruff)
    # "ANN102",  # Missing type annotation for `cls` in classmethod (Removed from Ruff)
    # "ANN201",  # Missing return type annotation for public function
    # "ANN202",  # Missing return type annotation for private function
    # "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed

    # Naming
    # "N802",    # Function name should be lowercase
    # "N803",    # Argument name should be lowercase
    # "N806",    # Variable in function should be lowercase

    # Security
    "S101",  # Use of assert detected
    "S603",  # subprocess call - check for execution of untrusted input

    # Pytest related
    # "PT001",   # Use `pytest.fixture()` without parameters
    # "PT011",   # `pytest.raises(ValueError)` is too broad, specify the match parameter

    # Others
    "TRY003", # Avoid specifying long messages outside the exception class
    "T201",  # print found
    # "FIX002",  # Line contains TODO

    # Supressing for now on dev branch (2025-04-11)
    "F841", # Local variable assigned but never used
]

# Ignore specific rules per file/directory
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Ignore assert statements in test files
"src/zeroth_law/analyzer.py" = ["N802", "SLF001"] # Ignore visitor method names and private access

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.13"
# warnings = true # Invalid option removed
pretty = true
show_error_context = true
show_error_codes = true
explicit_package_bases = true # Help mypy understand src layout
ignore_missing_imports = false # Default to false, override below
cache_dir = "/run/user/1000/mypy"

# Per-module options:
[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have type hints readily available
module = [
    "ruff.*", # Ignore missing types/stubs for ruff
    # Add others here if needed, e.g., "xdg.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# TEMPORARY: Ignore errors for specific modules causing
# "Source file found twice" when run via action_runner/subprocess.
# TODO: Investigate root cause of path issue for mypy execution via action_runner.
module = [
    "zeroth_law.git_utils",
    "src.zeroth_law.git_utils", # Add src prefix
    "zeroth_law.analyzer.python.analyzer",
    "src.zeroth_law.analyzer.python.analyzer", # Add src prefix
]
ignore_errors = true

# [[tool.mypy.overrides]] # Example for ignoring specific errors in a module

[tool.pylint.'MAIN']
# Use all default checkers.
disable = ["all"] # Disable all checks
enable = ["R0801"] # similar lines in modules checker
ignore = ["CVS", ".git", ".hg", ".svn", "tests/", "venv", ".venv"]
persistent = "yes"
jobs = 0 # Use all available CPUs

# Markdownlint configuration
[tool.markdownlint]
MD007 = { ul-indent = 4 } # Set unordered list indentation to 4 spaces

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/zeroth_law --cov-report=term-missing"
testpaths = [
    "tests",
]
cache_dir = "/run/user/1000/python/pytest"

[tool.coverage.run]
parallel = true
branch = false
source = ["src/zeroth_law"]
omit = [
    "src/zeroth_law/__main__.py", # If a CLI entry point is added
]

[tool.coverage.report]
#fail_under = 90 # Uncomment and adjust threshold later
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
